--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pulseaudio (0.9.5-5) unstable; urgency=low
+
+  * debian/control: Make Build-deps more specific. (Closes: #401111)
+
+ -- CJ van den Berg <cj@vdbonline.com>  Fri,  1 Dec 2006 14:56:17 +0100
+
 pulseaudio (0.9.5-4) unstable; urgency=low
 
   * Add comment about resampling methods and CPU consumption to
