--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+pulseaudio (0.9.5-7) unstable; urgency=low
+
+  * debian/control: Make pulseaudio-module-hal depend on hal, not just
+    libhal. (Closes: #411501)
+
+ -- CJ van den Berg <cj@vdbonline.com>  Mon, 19 Feb 2007 22:11:48 +0100
+
 pulseaudio (0.9.5-6) unstable; urgency=low
 
   * debian/patches/06_pulseaudio-0.9.5-suspend.dpatch:
