--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+pulseaudio (0.9.5-8) UNRELEASED; urgency=low
+
+  * debian/patches: Rework patch series for quilt.
+  * debian/patches: r1433-handle-suspended-alsa-devices
+    + Refreshed. Updated to the version commited upstream. This adds support
+      for suspended alsa sources.
+  * debian/patches: r1412-support-reversed-endian-floats
+    + Refreshed. Updated to the version commited upstream.
+
+ -- CJ van den Berg <cj@vdbonline.com>  Tue, 15 May 2007 12:53:58 +0200
+
 pulseaudio (0.9.5-7) unstable; urgency=low
 
   * debian/control: Make pulseaudio-module-hal depend on hal, not just
