--- a/debian/changelog
+++ b/debian/changelog
@@ -20,8 +20,11 @@ pulseaudio (0.9.5-8) UNRELEASED; urgency=low
     + Added r1423-dont-abort-config-loading-when-user-config-cannot-be-loaded
   * debian/patch: r1431-handle-when-alsa-tweaks-our-sample-spec
     + Added. Handle frame size changes. (Closes: #423887)
+  * debian/patch: r1434-dont-fail-if-hal-doesn-t-contain-any-devices
+    + Added. Don't unload module-hal-detect if HAL doesn't report any devices.
+             (Closes: #395893)
 
- -- CJ van den Berg <cj@vdbonline.com>  Tue, 15 May 2007 18:18:16 +0200
+ -- CJ van den Berg <cj@vdbonline.com>  Wed, 23 May 2007 09:41:40 +0200
 
 pulseaudio (0.9.5-7) unstable; urgency=low
 
