--- a/debian/changelog
+++ b/debian/changelog
@@ -25,8 +25,9 @@ pulseaudio (0.9.5-8) UNRELEASED; urgency=low
              (Closes: #395893)
   * debian/patches: Backport DOS attack fixes r1445-1450.
   * debian/rules: Port to CDBS.
+  * debian/control: Generate -dbg packages for detached symbols.
 
- -- CJ van den Berg <cj@vdbonline.com>  Wed, 23 May 2007 10:06:00 +0200
+ -- CJ van den Berg <cj@vdbonline.com>  Wed, 23 May 2007 10:08:50 +0200
 
 pulseaudio (0.9.5-7) unstable; urgency=low
 
