--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-pulseaudio (0.9.6-1) UNRELEASED; urgency=low
+pulseaudio (0.9.6-1) unstable; urgency=low
 
   * New Upstream Version.
     + Fix remote DOS vulnerabilities. (CVE-2007-1804)
