--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pulseaudio (0.9.6-2) UNRELEASED; urgency=low
+
+  * debian/control: Add -dbg packages.
+
+ -- CJ van den Berg <cj@vdbonline.com>  Tue, 29 May 2007 19:03:49 +0200
+
 pulseaudio (0.9.6-1) unstable; urgency=low
 
   * New Upstream Version.
