--- a/debian/changelog
+++ b/debian/changelog
@@ -3,8 +3,9 @@ pulseaudio (0.9.6-2) UNRELEASED; urgency=low
   * debian/control: Add -dbg packages.
   * debian/overrides/pulseaudio: Update libpulsecore override to new
       soversion.
+  * debian/copyright: Update e-mail address for Lennart Poettering.
 
- -- CJ van den Berg <cj@vdbonline.com>  Wed, 06 Jun 2007 12:13:43 +0200
+ -- CJ van den Berg <cj@vdbonline.com>  Wed, 06 Jun 2007 12:15:33 +0200
 
 pulseaudio (0.9.6-1) unstable; urgency=low
 
