--- a/debian/changelog
+++ b/debian/changelog
@@ -4,8 +4,10 @@ pulseaudio (0.9.6-2) UNRELEASED; urgency=low
   * debian/overrides/pulseaudio: Update libpulsecore override to new
       soversion.
   * debian/copyright: Update e-mail address for Lennart Poettering.
+  * debian/control: Make libpulse-browse0 depend on avahi-daemon to ensure
+      that the avahi daemon is running. (Closes: #440333)
 
- -- CJ van den Berg <cj@vdbonline.com>  Wed, 06 Jun 2007 12:15:33 +0200
+ -- CJ van den Berg <cj@vdbonline.com>  Fri, 31 Aug 2007 22:10:21 +0200
 
 pulseaudio (0.9.6-1) unstable; urgency=low
 
