--- a/debian/changelog
+++ b/debian/changelog
@@ -1,13 +1,16 @@
 pulseaudio (0.9.6-2) UNRELEASED; urgency=low
 
-  * debian/control: Add -dbg packages.
+  * debian/control:
+    - Add -dbg packages.
+    - Make libpulse-browse0 depend on avahi-daemon to ensure that the avahi
+        daemon is running. (Closes: #440333)
+    - Make libcap-dev and libasound-dev arch specific build deps.
+  * debian/rules: Generate arch specific install files. (Closes: #430366)
   * debian/overrides/pulseaudio: Update libpulsecore override to new
       soversion.
   * debian/copyright: Update e-mail address for Lennart Poettering.
-  * debian/control: Make libpulse-browse0 depend on avahi-daemon to ensure
-      that the avahi daemon is running. (Closes: #440333)
 
- -- CJ van den Berg <cj@vdbonline.com>  Fri, 31 Aug 2007 22:10:21 +0200
+ -- CJ van den Berg <cj@vdbonline.com>  Sat, 01 Sep 2007 01:28:12 +0200
 
 pulseaudio (0.9.6-1) unstable; urgency=low
 
