Install init script to start at 25 and stop at 15. (Closes: #428046)

--- a/debian/changelog
+++ b/debian/changelog
@@ -8,12 +8,14 @@ pulseaudio (0.9.6-2) UNRELEASED; urgency=low
     - Add recommends gnome-audio to pulseaudio-module-x11. (Closes: #437393)
     - Add minimum requirement of libatomic-ops-dev 1.2-2 to avoid FTBFS on
         powerpc.
-  * debian/rules: Generate arch specific install files. (Closes: #430366)
+  * debian/rules:
+    - Generate arch specific install files. (Closes: #430366)
+    - Install init script to start at 25 and stop at 15. (Closes: #428046)
   * debian/overrides/pulseaudio: Update libpulsecore override to new
       soversion.
   * debian/copyright: Update e-mail address for Lennart Poettering.
 
- -- CJ van den Berg <cj@vdbonline.com>  Sat, 01 Sep 2007 01:41:29 +0200
+ -- CJ van den Berg <cj@vdbonline.com>  Sat, 01 Sep 2007 02:03:49 +0200
 
 pulseaudio (0.9.6-1) unstable; urgency=low
 
