--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-pulseaudio (0.9.6-2) UNRELEASED; urgency=low
+pulseaudio (0.9.6-2) unstable; urgency=low
 
   * debian/control:
     - Add -dbg packages.
