Close 446026 and 436409 in changelog

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,6 @@
 pulseaudio (0.9.7-1) UNRELEASED; urgency=low
 
-  * New Upstream Version
+  * New Upstream Version. (Closes: #446026, #436409)
   * Drop all patches. All patches are merged upstream.
   * debian/control:
     + Replace ${Source-Version} with ${binary:Version}.
