--- a/debian/changelog
+++ b/debian/changelog
@@ -2,8 +2,11 @@ pulseaudio (0.9.7-2) UNRELEASED; urgency=low
 
   * Use pulseaudio (<< 0.9.7) instead of pulseaudio (< 0.9.7) in
     -esound-compat
+  * debian/patches/0002-Fix-pa_readlink-to-put-a-0-in-the-right-location.patch:
+    + Added. Fix pa_readlink to put a \0 directly after the link string. Fixes
+    issues with clients using the alsa compatibility layer
 
- -- Sjoerd Simons <sjoerd@debian.org>  Wed, 31 Oct 2007 17:17:14 +0100
+ -- Sjoerd Simons <sjoerd@debian.org>  Sat, 03 Nov 2007 21:16:49 +0100
 
 pulseaudio (0.9.7-1) unstable; urgency=low
 
