--- a/debian/changelog
+++ b/debian/changelog
@@ -5,8 +5,12 @@ pulseaudio (0.9.7-2) UNRELEASED; urgency=low
   * debian/patches/0002-Fix-pa_readlink-to-put-a-0-in-the-right-location.patch:
     + Added. Fix pa_readlink to put a \0 directly after the link string. Fixes
     issues with clients using the alsa compatibility layer
+  * deb/patches/0003-Define-__NR_eventfd-on-arm-if-it-wasn-t-defined-yet.patch:
+    + Added. Define __NR_eventfd. Fixes FTBS on arm, because libc6-dev does
+    define SYS_eventfd but older versions of linux-libc-dev don't define
+    __NR_eventfd yet.
 
- -- Sjoerd Simons <sjoerd@debian.org>  Sat, 03 Nov 2007 21:16:49 +0100
+ -- Sjoerd Simons <sjoerd@debian.org>  Sun, 04 Nov 2007 13:33:02 +0100
 
 pulseaudio (0.9.7-1) unstable; urgency=low
 
