--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,9 @@ pulseaudio (0.9.7-3) UNRELEASED; urgency=low
   [ CJ van den Berg ]
   * debian/control: Add depends on -utils to -module-x11. (Closes: #450840)
 
+  [ Sjoerd Simons ]
+  * Set pulseaudio setuid in postinst if the permissions aren't overriden by
+    dpkg-statoverride, instead of having the binary with suid perms in the deb
 
  -- Sjoerd Simons <sjoerd@debian.org>  Fri, 16 Nov 2007 18:17:14 +0100
 
