--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-pulseaudio (0.9.7-3) UNRELEASED; urgency=low
+pulseaudio (0.9.7-3) unstable; urgency=low
 
   [ CJ van den Berg ]
   * debian/control: Add depends on -utils to -module-x11. (Closes: #450840)
@@ -7,7 +7,7 @@ pulseaudio (0.9.7-3) UNRELEASED; urgency=low
   * Set pulseaudio setuid in postinst if the permissions aren't overriden by
     dpkg-statoverride, instead of having the binary with suid perms in the deb
 
- -- Sjoerd Simons <sjoerd@debian.org>  Fri, 16 Nov 2007 18:17:14 +0100
+ -- Sjoerd Simons <sjoerd@debian.org>  Fri, 16 Nov 2007 18:41:28 +0100
 
 pulseaudio (0.9.7-2) unstable; urgency=low
 
