Change the priority of all -dbg packages to extra

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
 pulseaudio (0.9.7-4) UNRELEASED; urgency=low
 
   * debian/overrides/pulseaudio: Remove override for setuid-binary.
+  * debian/control: Change the priority of all -dbg packages to extra.
 
- -- CJ van den Berg <cj@vdbonline.com>  Sat, 17 Nov 2007 22:03:47 +0100
+ -- CJ van den Berg <cj@vdbonline.com>  Sat, 17 Nov 2007 22:05:34 +0100
 
 pulseaudio (0.9.7-3) unstable; urgency=low
 
