--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,11 @@
 pulseaudio (0.9.7-4) UNRELEASED; urgency=low
 
   * debian/overrides/pulseaudio: Remove override for setuid-binary.
-  * debian/control: Change the priority of all -dbg packages to extra.
+  * debian/control:
+    + Change the priority of all -dbg packages to extra.
+    + Stop recommending libao-pulse. libao2 has built-in pulseaudio support.
 
- -- CJ van den Berg <cj@vdbonline.com>  Sat, 17 Nov 2007 22:05:34 +0100
+ -- CJ van den Berg <cj@vdbonline.com>  Sun, 18 Nov 2007 15:43:35 +0100
 
 pulseaudio (0.9.7-3) unstable; urgency=low
 
