Force pulseaudio to depend on libltdl3 >= 1.5.24-1 (Closes: #451638)

--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,7 @@ pulseaudio (0.9.7-4) UNRELEASED; urgency=low
   * debian/control:
     + Change the priority of all -dbg packages to extra.
     + Stop recommending libao-pulse. libao2 has built-in pulseaudio support.
+    + Force pulseaudio to depend on libltdl3 >= 1.5.24-1 (Closes: #451638)
 
  -- CJ van den Berg <cj@vdbonline.com>  Sun, 18 Nov 2007 15:43:35 +0100
 
