LSB-ify pulseaudio init script

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
 pulseaudio (0.9.7-4) UNRELEASED; urgency=low
 
+  [ CJ van den Berg ]
   * debian/overrides/pulseaudio: Remove override for setuid-binary.
   * debian/control:
     + Change the priority of all -dbg packages to extra.
@@ -7,6 +8,10 @@ pulseaudio (0.9.7-4) UNRELEASED; urgency=low
     + Force pulseaudio to depend on libltdl3 >= 1.5.24-1 (Closes: #451638)
   * debian/patches:
     + Added 0004-Double-esound-maximum-sample-size.patch from Ubuntu.
+
+  [Daniel T Chen]
+  * debian/control: Add lsb-base (>= 3) to pulseaudio's dependencies.
+  * debian/pulseaudio.init: LSB-ify.
 
  -- CJ van den Berg <cj@vdbonline.com>  Sun, 18 Nov 2007 20:37:43 +0100
 
