--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,7 @@ pulseaudio (0.9.7-4) UNRELEASED; urgency=low
     + Change the priority of all -dbg packages to extra.
     + Stop recommending libao-pulse. libao2 has built-in pulseaudio support.
     + Make pulseaudio conflict libltdl3 < 1.5.24-1 (Closes: #451638)
+    + Change XS-Vcs-* tags to Vcs-*.
   * debian/patches:
     + Added 0004-Double-esound-maximum-sample-size.patch from Ubuntu.
 
@@ -13,7 +14,7 @@ pulseaudio (0.9.7-4) UNRELEASED; urgency=low
   * debian/control: Add lsb-base (>= 3) to pulseaudio's dependencies.
   * debian/pulseaudio.init: LSB-ify.
 
- -- CJ van den Berg <cj@vdbonline.com>  Sun, 18 Nov 2007 20:57:29 +0100
+ -- CJ van den Berg <cj@vdbonline.com>  Mon, 19 Nov 2007 12:54:17 +0100
 
 pulseaudio (0.9.7-3) unstable; urgency=low
 
