--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,7 @@ pulseaudio (0.9.7-4) UNRELEASED; urgency=low
     + Stop recommending libao-pulse. libao2 has built-in pulseaudio support.
     + Make pulseaudio conflict libltdl3 < 1.5.24-1 (Closes: #451638)
     + Change XS-Vcs-* tags to Vcs-*.
+    + Add libpulsecore4-dbg package.
   * debian/patches:
     + Added 0004-Double-esound-maximum-sample-size.patch from Ubuntu.
 
@@ -14,7 +15,7 @@ pulseaudio (0.9.7-4) UNRELEASED; urgency=low
   * debian/control: Add lsb-base (>= 3) to pulseaudio's dependencies.
   * debian/pulseaudio.init: LSB-ify.
 
- -- CJ van den Berg <cj@vdbonline.com>  Mon, 19 Nov 2007 12:54:17 +0100
+ -- CJ van den Berg <cj@vdbonline.com>  Tue, 20 Nov 2007 00:19:16 +0000
 
 pulseaudio (0.9.7-3) unstable; urgency=low
 
