--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,7 @@ pulseaudio (0.9.7-4) UNRELEASED; urgency=low
     + Change XS-Vcs-* tags to Vcs-*.
     + Add libpulsecore4-dbg package.
     + Rename gstreamer plugin package in recommends.
+    + Add Homepage field.
   * debian/patches:
     + Added 0004-Double-esound-maximum-sample-size.patch from Ubuntu.
 
@@ -16,7 +17,7 @@ pulseaudio (0.9.7-4) UNRELEASED; urgency=low
   * debian/control: Add lsb-base (>= 3) to pulseaudio's dependencies.
   * debian/pulseaudio.init: LSB-ify.
 
- -- CJ van den Berg <cj@vdbonline.com>  Wed, 21 Nov 2007 12:42:44 +0100
+ -- CJ van den Berg <cj@vdbonline.com>  Wed, 21 Nov 2007 13:52:42 +0100
 
 pulseaudio (0.9.7-3) unstable; urgency=low
 
