--- a/debian/changelog
+++ b/debian/changelog
@@ -23,6 +23,10 @@ pulseaudio (0.9.8-1) UNRELEASED; urgency=low
     + Added, svn commit r2074 from upstream.
   * debian/patches/0004-Force-module-tunnel-to-use-protocol-version-11.patch:
     + Added, fixes protocol errors in module-tunnel.
+  * debian/pulseaudio.manpages: Add manpages default.pa.5, pulse-client.conf.5
+      and pulse-daemon.conf.5
+  * debian/pulseaudio-utils.manpages: Add manpages pabrowse.1, pacat.1,
+      pacmd.1, pactl.1, padsp.1, paplay.1, pasuspender.1 and pax11publish.1
 
   [Daniel T Chen]
   * debian/control: Add lsb-base (>= 3) to pulseaudio's dependencies.
