--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+pulseaudio (0.9.8-2) UNRELEASED; urgency=low
+
+  * Bump shlibs of libpulse and libpulse-browse. Upstream has started
+    versioning symbols.
+
+ -- Sjoerd Simons <sjoerd@debian.org>  Fri, 04 Jan 2008 12:13:08 +0100
+
 pulseaudio (0.9.8-1) unstable; urgency=low
 
   [ CJ van den Berg ]
