--- a/debian/changelog
+++ b/debian/changelog
@@ -12,7 +12,9 @@ pulseaudio (0.9.8-2) UNRELEASED; urgency=low
     - Removed. Obsoleted by the two previous patches
   * debian/patches/0005-make-sure-to-create-.pulse-before-using-any-config.patch
     - Renamed to 0004-make-sure-to-create-.pulse-before-using-any-config.patch
-  * debian/patches/
+  * debian/patches/0007-Change-config-to-not-fail-if-loading-of-esd-gconf-o.patch
+    - Added. Don't fail to load if esd, gconf or x11-publish fail. 
+      (Closes: 456590)
 
  -- Sjoerd Simons <sjoerd@debian.org>  Fri, 04 Jan 2008 12:13:08 +0100
 
