--- a/debian/changelog
+++ b/debian/changelog
@@ -4,7 +4,7 @@ pulseaudio (0.9.8-2) UNRELEASED; urgency=low
     versioning symbols.
   * debian/patches/0005-Don-t-add-protocol-fields-introduced-in-version-12-w.patch
     - Added. Don't send fields/opcodes adding in protocol version 12 to
-      clients using version 11.
+      clients using version 11. (Closes: #458556)
   * debian/patches/0006-Implement-opcodes-added-in-version-12-in-the-tunnel.patch
     - Added. Add dummy implementations of the opcodes added in protocol
     version 12.
@@ -13,7 +13,7 @@ pulseaudio (0.9.8-2) UNRELEASED; urgency=low
   * debian/patches/0005-make-sure-to-create-.pulse-before-using-any-config.patch
     - Renamed to 0004-make-sure-to-create-.pulse-before-using-any-config.patch
   * debian/patches/0007-Change-config-to-not-fail-if-loading-of-esd-gconf-o.patch
-    - Added. Don't fail to load if esd, gconf or x11-publish fail. 
+    - Added. Don't fail to load if esd, gconf or x11-publish fail.
       (Closes: 456590)
 
  -- Sjoerd Simons <sjoerd@debian.org>  Fri, 04 Jan 2008 12:13:08 +0100
