--- a/debian/changelog
+++ b/debian/changelog
@@ -14,7 +14,7 @@ pulseaudio (0.9.8-2) UNRELEASED; urgency=low
     - Renamed to 0004-make-sure-to-create-.pulse-before-using-any-config.patch
   * debian/p.../0007-Change-config-to-not-fail-if-loading-of-esd-gconf-o.patch
     - Added. Don't fail to load if esd, gconf or x11-publish fail.
-      (Closes: 456590)
+      (Closes: 456590, #456505)
 
  -- Sjoerd Simons <sjoerd@debian.org>  Fri, 04 Jan 2008 12:13:08 +0100
 
