New upstream version

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,13 @@
-pulseaudio (0.9.9-2) UNRELEASED; urgency=low
+pulseaudio (0.9.10~svn2189-1) UNRELEASED; urgency=low
+
+  [ CJ van den Berg ]
+  * New Upstream Version
 
   [ Petter Reinholdtsen ]
   * debian/pulseaudio.init: Fix problems with LSB header in init.d script.
       (Closes: #470934)
 
- -- CJ van den Berg <cj@vdbonline.com>  Fri, 14 Mar 2008 21:50:26 +0100
+ -- CJ van den Berg <cj@vdbonline.com>  Sat, 29 Mar 2008 08:24:26 +0100
 
 pulseaudio (0.9.9-1) unstable; urgency=high
 
