--- a/debian/changelog
+++ b/debian/changelog
@@ -10,6 +10,7 @@ pulseaudio (0.9.10-1) UNRELEASED; urgency=low
     - 0006-Implement-opcodes-added-in-version-12-in-the-tunnel.patch
     - 0007-Change-config-to-not-fail-if-loading-of-esd-gconf-o.patch
     - 0008-Fix-compilation-on-non-linux-platforms.patch
+  * Update Standards-Version to 3.7.3 (no changes required).
 
   [ Petter Reinholdtsen ]
   * debian/pulseaudio.init: Fix problems with LSB header in init.d script.
