--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+pulseaudio (0.9.10-2) UNRELEASED; urgency=low
+
+  * debian/patches/0003-Define-PULSE_INTERNAL.patch
+    - Added. Let the daemon put PULSE_INTERNAL in its environment so things
+    can detect when called from within pulseaudio
+
+ -- Sjoerd Simons <sjoerd@debian.org>  Sun, 27 Apr 2008 21:43:47 +0200
+
 pulseaudio (0.9.10-1) unstable; urgency=low
 
   [ CJ van den Berg ]
