--- a/debian/changelog
+++ b/debian/changelog
@@ -3,8 +3,12 @@ pulseaudio (0.9.10-2) UNRELEASED; urgency=low
   * debian/patches/0003-Define-PULSE_INTERNAL.patch
     - Added. Let the daemon put PULSE_INTERNAL in its environment so things
     can detect when called from within pulseaudio
+  * debian/patches/0004-load-module-gconf-earlier.patch
+    - Added. Load module-gconf before module-volume-restore and
+    module-device-restore. Otherwise setting virtual sinks/sources as default
+    won't be persistent
 
- -- Sjoerd Simons <sjoerd@debian.org>  Sun, 27 Apr 2008 21:43:47 +0200
+ -- Sjoerd Simons <sjoerd@debian.org>  Sat, 10 May 2008 18:35:53 +0200
 
 pulseaudio (0.9.10-1) unstable; urgency=low
 
