--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+pulseaudio (0.9.10-3) UNRELEASED; urgency=low
+
+  * debian/patches/0006-fix-iteration-over-random-devices.patch
+    - Added. Iterate over the various random devices if opening fails
+      (Closes: #491270)
+
+ -- Sjoerd Simons <sjoerd@debian.org>  Sun, 03 Aug 2008 13:01:38 +0100
+
 pulseaudio (0.9.10-2) unstable; urgency=low
 
   * debian/patches/0003-Define-PULSE_INTERNAL.patch
