--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-pulseaudio (0.9.10-3) UNRELEASED; urgency=low
+pulseaudio (0.9.10-3) unstable; urgency=low
 
   * debian/patches/0006-fix-iteration-over-random-devices.patch
     - Added. Iterate over the various random devices if opening fails
       (Closes: #491270)
 
- -- Sjoerd Simons <sjoerd@debian.org>  Sun, 03 Aug 2008 13:01:38 +0100
+ -- Sjoerd Simons <sjoerd@debian.org>  Sat, 30 Aug 2008 14:24:51 +0100
 
 pulseaudio (0.9.10-2) unstable; urgency=low
 
