--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,13 @@
-pulseaudio (0.9.10-4) UNRELEASED; urgency=low
+pulseaudio (0.9.13-1) UNRELEASED; urgency=low
 
+  [ CJ van den Berg ]
   * debian/patches/0007-fix-FTBFS-on-GNU-kFreeBSD.patch
     - Added. Fix FTBTS on GNU/kFreeBSD. (Closes: #497624)
 
- -- CJ van den Berg <cj@vdbonline.com>  Wed, 03 Sep 2008 12:53:23 +0200
+  [ Sjoerd Simons ]
+  * New Upstream Version
+
+ -- Sjoerd Simons <sjoerd@debian.org>  Sun, 19 Oct 2008 12:47:56 +0100
 
 pulseaudio (0.9.10-3) unstable; urgency=low
 
