--- a/debian/changelog
+++ b/debian/changelog
@@ -24,8 +24,9 @@ pulseaudio (0.9.13-1) UNRELEASED; urgency=low
   * 0001-Set-ESD-socket-to-tmp-.esd-socket-to-match-up-with.patch
     - Dropped, not necessary anymore, the --disable-per-user-esound-socket
       configure flag now has the same result
+  * debian/control: Add libspeexdsp-dev (>= 1.2) to Build-Depends
 
- -- Sjoerd Simons <sjoerd@debian.org>  Sun, 19 Oct 2008 13:40:50 +0100
+ -- Sjoerd Simons <sjoerd@debian.org>  Sun, 19 Oct 2008 14:10:34 +0100
 
 pulseaudio (0.9.10-3) unstable; urgency=low
 
